# Stochastic-model-of-T-cell-repositioning-two-IS

./: LICENSE  README.md
picturesVideos/: Make_Movie.sh  Make_Povray_files.py  generate_y.py
picturesVideos/cell_shapes/: Cell_Parametres.txt  Nucleus_Parametres.txt  notes.txt
picturesVideos/numerical_results/: IS_CAPTURE_SHRINKAGE_1_0.txt  IS_CAPTURE_SHRINKAGE_2_0.txt  IS_CORTICAL_SLIDING_0.txt  IS_CORTICAL_SLIDING_1_0.txt  IS_CORTICAL_SLIDING_2_0.txt  MTOC_center_0.txt  MT_0_0.txt  MT_9_0.txt  NUMBER_OF_SHORTER_MICROTUBULES_0.txt  dokument.txt  dynein_0.000000_0.txt  micro_0_0.txt  micro_Lenght_0_0.txt  notes.txt  seeds.txt
picturesVideos/pictures/: notes.txt
picturesVideos/povrayFiles/: notes.txt
picturesVideos/textFiles/: notes.txt
two_IS_source_code/: CMakeLists.txt  main.cpp
two_IS_source_code/src/: CMakeLists.txt  Cell.cpp  Cell.h  CellShape.cpp  CellShape.h  Cell_parametres.cpp  Cell_parametres.h  Cell_two_IS.cpp  Cell_two_IS.h  Dynein.cpp  Dynein.h  Dynein_real.cpp  Dynein_real.h  GeneralGeometry.cpp  GeneralGeometry.h  Generator.cpp  Generator.h  ISCaptShrinkage.cpp  ISCaptShrinkage.h  ISCorticalSl.cpp  ISCorticalSl.h  IS_Capture_shrinkage_parameters.h  IS_Cortical_Sl_parameter.h  IS_Dynein_Cell_surface.h  KISS.cpp  KISS.h  MTOC2.cpp  MTOC2.h  MTOCparam.h  Makefile  Microtubule.cpp  Microtubule.h  Nucleus.cpp  Nucleus.h  Nucleus_parametres.h  Surface.cpp  Surface.h  cmake_install.cmake  dynamic_instability.cpp  dynamic_instability.h  (+11 more)
